<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkOnOff</string>
    <string name="action_settings">Settings</string>
    <string name="active_time">Active Time</string>
    <string name="deactive_time">Deactive Time</string>
    <string name="default_text">0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close_application">Close Application</string>
    <string name="wifi">Wi-fi</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="hour">Hour</string>
    <string name="application_starting">Application is starting.</string>
    <string name="application_stopping">Application is stopped.</string>
    <string name="zero_input">0 for a time input is not recommended. Please enter another value.</string>
    <string name="non_checkbox_selected">You should select at least one of the network type!</string>
    <string name="banner_ad_unit_id">ca-app-pub-4772809461009096/6664511565</string>
    
    
    <string-array name="time_array">
        <item>Min</item>
        <item>Sec</item>
        <item>Hour</item>
    </string-array>

</resources>