<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baydar.netonoff.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:text="@string/active_time"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBox1"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_alignRight="@+id/checkBox1"
        android:layout_alignStart="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:text="@string/wifi" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignTop="@+id/editText1"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toLeftOf="@+id/editText1"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toStartOf="@+id/editText1"
        android:entries="@array/time_array"
        android:prompt="@string/min"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="39dp"
        android:text="@string/deactive_time"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignTop="@+id/editText2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toStartOf="@+id/editText2"
        android:entries="@array/time_array"
        android:prompt="@string/min"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toEndOf="@+id/checkBox1"
        android:layout_toRightOf="@+id/checkBox1"
        android:ems="10"
        android:hint="@string/default_text"
        android:inputType="number"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/spinner1"
        android:layout_toRightOf="@+id/spinner1"
        android:ems="10"
        android:hint="@string/default_text"
        android:inputType="number"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/mobile_data" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="50dp"
        android:text="@string/close_application" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignRight="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_alignEnd="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="50dp"
        android:text="@string/start" />

    <fragment
        android:id="@+id/fragment2"
        android:name="com.baydar.netonoff.MainActivity$PlaceholderFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adFragment"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/adFragment" />

    <fragment
        android:id="@+id/adFragment"
        android:name="com.baydar.netonoff.MainActivity$AdFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fragment2"
        android:layout_alignBottom="@+id/fragment2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

</RelativeLayout>